--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -44,7 +44,7 @@ jobs:
           rm -rf ./release/*.zip
           rm -rf ./release/*-unpacked
           rm -rf ./release/mac
-          export NAME=$(ls release/proton-wallet*)
+          export NAME=$(ls release/cirqwallet*)
           echo ::set-output name=file_name::${NAME:8}
 
       - name: Store Build Artifact
