--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cirqwallet",
   "productName": "CirqWallet",
-  "version": "0.1.4",
+  "version": "0.2.0",
   "description": "Cirquity wallet based on React, React Router, Webpack, and React Hot Loader",
   "scripts": {
     "build": "concurrently \"yarn build-main\" \"yarn build-renderer\"",
@@ -196,7 +196,6 @@
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-testcafe": "^0.2.1",
     "fbjs-scripts": "^1.2.0",
-    "husky": "^1.3.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.5.0",
     "lint-staged": "^8.1.5",
@@ -262,17 +261,12 @@
     "semver": "^6.2.0",
     "source-code-pro": "^2.30.2",
     "tail": "^2.0.3",
-    "turtlecoin-wallet-backend": "^5.0.0"
+    "cirquity-wallet-backend": "git+https://github.com/cirquity/cirquity-wallet-backend-js.git"
   },
   "devEngines": {
     "node": ">=10.x",
     "npm": ">=4.x",
     "yarn": ">=0.21.3"
   },
-  "browserslist": "electron 1.6",
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  }
+  "browserslist": "electron 1.6"
 }
